src/test/deca/codegen/invalid/test_invalid_overFloaw_Boucle.deca
//  Teste d'allocation d'attribut d'une classe
// Resultats:
//  ERROR PUSH : Debordement de la pile

class A{
    int x = (new B()).getX();
}

class B extends A{
    int getX(){
        return 1; 
    }
}

{
    A a = new A();
}

